--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,12 @@ out/
 
 # Gradle files
 .gradle/
-build/
+/*
+!/build
+/build/*
+!/build/outputs/
+/build/outputs/*
+!/build/outputs/aar
 
 # Local configuration file (sdk path, etc)
 local.properties
